--- a/pages/blog.html
+++ b/pages/blog.html
@@ -24,8 +24,8 @@
         <p class="font-body text-xl font-light text-primary dark:text-white">Articles, tutorials, snippets, rants, and everything else. Subscribe for updates as they happen.</p>
       </div>
 
-      <form class="flex flex-col py-12 sm:flex-row">
-        <input type="email" id="subscribe" placeholder="Drop that email here…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-1/2" />
+      <form name="subscription" netlify class="flex flex-col py-12 sm:flex-row">
+        <input type="email" id="email" name="email" placeholder="Drop that email here…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-1/2" />
         <button type="submit" class="mt-5 bg-secondary px-10 py-4 font-body text-xl font-semibold text-white hover:bg-green sm:mt-0 md:text-2xl">Subscribe</button>
       </form>
 
