--- a/pages/home.html
+++ b/pages/home.html
@@ -26,7 +26,9 @@
     <div class="py-16 lg:py-20">
       <section x-include="components/hello-world.html" class="border-b border-grey-lighter py-8"></section>
       <section x-include.markdown="content/welcome.md" class="border-b border-grey-lighter py-8"></section>
-      <section x-include.json="json/example.json" class="border-b border-grey-lighter py-8"></section>
+      <div x-json:example="json/example.json">
+        <div x-effect="console.log('json fetch & store example', $store.example)"></div>
+      </div>
     </div>
 
     <div class="border-b border-grey-lighter py-16 lg:py-20">
@@ -47,14 +49,48 @@
     <div class="py-16 lg:py-20">
       <div class="flex items-center pb-6">
         <img src="/assets/img/icon-story.png" alt="icon story" />
-        <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">My Story</h3>
+        <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">Blog</h3>
         <a x-link href="/blog" class="flex items-center pl-10 font-body italic text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary">
           All posts
           <img src="/assets/img/long-arrow-right.png" class="ml-3" alt="arrow right" />
         </a>
       </div>
-      <div class="pt-8">
-        <div class="border-b border-grey-lighter pb-8">
+      <div x-data="{ posts: [], filteredPosts: [], filterPosts: '', postsOrder: 'desc', postsLimit: 3 }" x-init="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit=3&_sort=id&_order='+postsOrder)).json()" class="pt-8">
+
+        <div class="flex">
+          <input x-model.debounce="filterPosts" x-effect="filteredPosts = filterPosts ? posts.filter(post => post.title.indexOf(filterPosts) > -1 || post.body.indexOf(filterPosts) > -1) : posts" type="text" placeholder="Filter posts by title or body text" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-2/3" />
+          <select x-model="postsLimit" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <option selected disabled>limit</option>
+            <option>3</option>
+            <option>5</option>
+            <option>10</option>
+            <option>100</option>
+          </select>
+          <select x-model="postsOrder" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+              <option selected disabled>order</option>
+              <option>asc</option>
+              <option>desc</option>
+          </select>
+        </div>
+
+        <div class="pt-5">
+          Posts: <span x-text="filteredPosts.length"></span>
+        </div>
+
+        <template x-for="post in filteredPosts" :key="post.id">
+          <div class="border-b border-grey-lighter pt-10 pb-8">
+            <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">JSON API</span>
+            <a x-link :href="'/blog/'+post.id" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary" x-text="post.title"></a>
+            <p x-text="post.body"></p>
+            <div class="flex items-center pt-4">
+              <p class="pr-2 font-body font-light text-primary dark:text-white">July 19, 2020</p>
+              <span class="font-body text-grey dark:text-white">//</span>
+              <p class="pl-2 font-body font-light text-primary dark:text-white">4 min read</p>
+            </div>
+          </div>
+        </template>
+
+        <div class="border-b border-grey-lighter pt-10 pb-8">
           <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">category</span>
           <a x-link href="/blog/testing123" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Quis hendrerit dolor magna eget est lorem ipsum dolor sit</a>
           <div class="flex items-center pt-4">
@@ -92,7 +128,20 @@
         <img src="/assets/img/icon-project.png" alt="icon story" />
         <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">My Projects</h3>
       </div>
-      <div>
+      <div x-data="{ comments: [] }" x-init="comments = await (await fetch('/json/comments.json')).json()">
+
+        <template x-for="comment in comments">
+          <a x-link :href="'/blog/post/'+comment.id" class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
+            <span class="w-9/10 pr-8">
+              <h4 class="font-body text-lg font-semibold text-primary dark:text-white" x-text="comment.name"></h4>
+              <p class="font-body font-light text-primary dark:text-white" x-text="comment.body"></p>
+            </span>
+            <span class="w-1/10">
+              <img src="/assets/img/chevron-right.png" class="mx-auto" alt="chevron right" />
+            </span>
+          </a>
+        </template>
+
         <a x-link href=" / " class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
           <span class="w-9/10 pr-8">
             <h4 class="font-body text-lg font-semibold text-primary dark:text-white">TailwindCSS</h4>
