--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
       <div class="pr-2 pt-3 sm:pt-0">
         <p class="font-body text-xl font-light text-primary dark:text-white">Got a question or proposal, or just want to say hello? Go ahead. You know what to do.</p>
       </div>
-      <form name="contact" netlify class="pt-16">
+      <form name="contact" method="POST" netlify class="pt-16">
         <div class="flex flex-col sm:flex-row">
           <div class="w-full sm:mr-3 sm:w-1/2">
             <label class="block pb-3 font-body font-medium text-primary dark:text-white">Your Name</label>
