--- a/pages/blog.html
+++ b/pages/blog.html
@@ -24,7 +24,7 @@
         <p class="font-body text-xl font-light text-primary dark:text-white">Articles, tutorials, snippets, rants, and everything else. Subscribe for updates as they happen.</p>
       </div>
 
-      <form name="subscription" netlify class="flex flex-col py-12 sm:flex-row">
+      <form name="subscription" method="POST" netlify class="flex flex-col py-12 sm:flex-row">
         <input type="email" id="email" name="email" placeholder="Drop that email here…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-1/2" />
         <button type="submit" class="mt-5 bg-secondary px-10 py-4 font-body text-xl font-semibold text-white hover:bg-green sm:mt-0 md:text-2xl">Subscribe</button>
       </form>
@@ -44,7 +44,7 @@
             <span class="mb-4 inline-block rounded-full bg-grey-light px-2 py-1 font-body text-sm text-blue-dark">category</span>
             <span class="mb-4 ml-4 inline-block rounded-full bg-yellow-light px-2 py-1 font-body text-sm text-yellow-dark">category</span>
           </div>
-          <a href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer</a>
+          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer</a>
           <div class="flex items-center pt-4">
             <p class="pr-2 font-body font-light text-primary dark:text-white">June 30, 2020</p>
             <span class="font-body text-grey dark:text-white">//</span>
@@ -53,7 +53,7 @@
         </div>
         <div class="border-b border-grey-lighter pt-10 pb-8">
           <span class="mb-4 inline-block rounded-full bg-blue-light px-2 py-1 font-body text-sm text-blue">category</span>
-          <a href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">In eu mi bibendum neque egestas congue quisque egestas diam</a>
+          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">In eu mi bibendum neque egestas congue quisque egestas diam</a>
           <div class="flex items-center pt-4">
             <p class="pr-2 font-body font-light text-primary dark:text-white">June 26, 2020</p>
             <span class="font-body text-grey dark:text-white">//</span>
@@ -62,7 +62,7 @@
         </div>
         <div class="border-b border-grey-lighter pt-10 pb-8">
           <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">category</span>
-          <a href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Elit eget gravida cum sociis natoque penatibus et magnis dis</a>
+          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Elit eget gravida cum sociis natoque penatibus et magnis dis</a>
           <div class="flex items-center pt-4">
             <p class="pr-2 font-body font-light text-primary dark:text-white">July 19, 2020</p>
             <span class="font-body text-grey dark:text-white">//</span>
@@ -74,7 +74,7 @@
             <span class="mb-4 inline-block rounded-full bg-grey-light px-2 py-1 font-body text-sm text-blue-dark">category</span>
             <span class="mb-4 ml-4 inline-block rounded-full bg-yellow-light px-2 py-1 font-body text-sm text-yellow-dark">category</span>
           </div>
-          <a href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Ut tellus elementum sagittis vitae et leo duis ut diam</a>
+          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Ut tellus elementum sagittis vitae et leo duis ut diam</a>
           <div class="flex items-center pt-4">
             <p class="pr-2 font-body font-light text-primary dark:text-white">June 30, 2020</p>
             <span class="font-body text-grey dark:text-white">//</span>
@@ -83,7 +83,7 @@
         </div>
         <div class="border-b border-grey-lighter pt-10 pb-8">
           <span class="mb-4 inline-block rounded-full bg-blue-light px-2 py-1 font-body text-sm text-blue">category</span>
-          <a href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Etiam tempor orci eu lobortis elementum nibh tellus molestie nunc</a>
+          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Etiam tempor orci eu lobortis elementum nibh tellus molestie nunc</a>
           <div class="flex items-center pt-4">
             <p class="pr-2 font-body font-light text-primary dark:text-white">June 26, 2020</p>
             <span class="font-body text-grey dark:text-white">//</span>
