--- a/pages/home.html
+++ b/pages/home.html
@@ -17,18 +17,41 @@
     <div class="border-b border-grey-lighter py-16 lg:py-20">
       <h1 class="flex items-center gap-3 pt-3 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
         <img src="/assets/img/author.png" class="h-16 w-16" alt="author" />
-        Hi, I’m John Doe.<span x-show="isMobileMenuOpen"> on mobile</span>
+        Hi, I’m John Doe.
       </h1>
       <p class="pt-3 font-body text-xl font-light text-primary dark:text-white">A software engineer and open-source advocate enjoying the sunny life in Barcelona, Spain.</p>
-      <a x-link href="/" class="mt-12 block bg-secondary px-10 py-4 text-center font-body text-xl font-semibold text-white transition-colors hover:bg-green sm:inline-block sm:text-left sm:text-2xl"> Say Hello! </a>
+      <div x-data="{ greeting: 'Hello!', showGreeting: false }" class="mt-12 flex flex-wrap items-center gap-5">
+        <button @click="showGreeting = ! showGreeting" class="shrink-0 block bg-secondary px-10 py-4 text-center font-body text-xl font-semibold text-white transition-colors hover:bg-green sm:inline-block sm:text-left sm:text-2xl"> Say Hello! </button>
+        <span x-show="showGreeting" x-text="greeting" x-transition class="text-5xl"></span>
     </div>
 
-    <div class="py-16 lg:py-20">
+    <div x-cloak>
       <section x-include="components/hello-world.html" class="border-b border-grey-lighter py-8"></section>
       <section x-include.markdown="content/welcome.md" class="border-b border-grey-lighter py-8"></section>
-      <div x-json:example="json/example.json">
-        <div x-effect="console.log('json fetch & store example', $store.example)"></div>
-      </div>
+      <section x-json:example="json/example.json" class="border-b border-grey-lighter py-8">
+        <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON file read example</h2>
+        <p><strong x-text="$store.example?.menu.value + ':'"></strong></p>
+        <ul x-show="$store.example" class="list-disc pl-5">
+          <template x-for="(item, index) in $store.example?.menu.popup.menuitem" :key="index">
+            <li>
+              <span x-text="item.value"></span>
+              <button @click="alert('You clicked '+item.onclick+' action')" x-text="item.onclick" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></button>
+            </li>
+          </template>
+        </ul>
+      </section>
+      <section x-json:users="https://jsonplaceholder.typicode.com/users" class="border-b border-grey-lighter py-8">
+        <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON file read and store from API response</h2>
+        <ul x-show="$store.users" class="list-disc pl-5">
+          <template x-for="(user, index) in $store.users" :key="index">
+            <li>
+              <span x-text="user.name"></span>
+              &lt;<a :href="'mailto:'+user.email" :title="'Mail to '+user.email" x-text="user.email" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></a>&gt;
+              (<a :href="'https://'+user.website" :title="'Open '+user.website" x-text="user.website" target="_blank" rel="nofollow noopener" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></a>)
+            </li>
+          </template>
+        </ul>
+      </section>
     </div>
 
     <div class="border-b border-grey-lighter py-16 lg:py-20">
@@ -59,14 +82,14 @@
 
         <div class="flex">
           <input x-model.debounce="filterPosts" x-effect="filteredPosts = filterPosts ? posts.filter(post => post.title.indexOf(filterPosts) > -1 || post.body.indexOf(filterPosts) > -1) : posts" type="text" placeholder="Filter posts by title or body text" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-2/3" />
-          <select x-model="postsLimit" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+          <select x-model="postsLimit" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 dark:text-primary text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500">
             <option selected disabled>limit</option>
             <option>3</option>
             <option>5</option>
             <option>10</option>
             <option>100</option>
           </select>
-          <select x-model="postsOrder" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+          <select x-model="postsOrder" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 dark:text-primary text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
               <option selected disabled>order</option>
               <option>asc</option>
               <option>desc</option>
@@ -74,7 +97,7 @@
         </div>
 
         <div class="pt-5">
-          Posts: <span x-text="filteredPosts.length"></span>
+          Posts: <span x-text="filteredPosts.length"></span> + 3 static ones
         </div>
 
         <template x-for="post in filteredPosts" :key="post.id">
