--- a/index.html
+++ b/index.html
@@ -17,8 +17,26 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/marked@2.1.3/marked.min.js"></script>
     <script src="https://unpkg.com/@shaun/alpinejs-router@1.x.x/dist/cdn.min.js" defer></script>
+    <script src="https://unpkg.com/alpinejs-head@latest/dist/head.min.js" defer></script>
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 
+    <meta name="author" content="revert@revert.pl">
+    <meta name="theme-color" content="#7AC1D1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="assets/img/favicon/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="assets/img/favicon/favicon.ico">
+    <link rel="icon" href="assets/img/favicon/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="assets/img/favicon/favicon-16x16.png" sizes="16x16" type="image/png">
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@tailwindmade" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="https://alpinejs-spa.netlify.app/assets/img/social.jpg" />
+    <meta property="og:url" content="https://alpinejs-spa.netlify.app/" />
+    <meta property="og:site_name" content="AlpineJS SPA Template" />
+    <meta property="og:title" content="AlpineJS SPA Template" />
+
+    <title>AlpineJS SPA Template</title>
   </head>
 
   <body x-data="global()" x-init="themeInit()" :class="isMobileMenuOpen ? 'max-h-screen overflow-hidden relative' : ''" class="dark:bg-primary text-primary dark:text-white">
@@ -29,11 +47,11 @@
 
     <main>
       <template x-route="/" template.preload="/pages/home.html"></template>
-      <template x-route="/blog/post/:slug" template="/pages/blog/comment.html"></template>
-      <template x-route="/post|/blog/:slug" template="/pages/blog/post.html"></template>
-      <template x-route="/blog" template="/pages/blog.html"></template>
-      <template x-route="/about" template="/pages/about.html"></template>
-      <template x-route="/contact" template="/pages/contact.html"></template>
+      <template x-route="/blog/post/:slug" template.preload="/pages/blog/comment.html"></template>
+      <template x-route="/post|/blog/:slug" template.preload="/pages/blog/post.html"></template>
+      <template x-route="/blog" template.preload="/pages/blog.html"></template>
+      <template x-route="/about" template.preload="/pages/about.html"></template>
+      <template x-route="/contact" template.preload="/pages/contact.html"></template>
       <template x-route.notfound>
         <div>
           Error 404 not found
