--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,31 @@
 <div>
+
+  <script x-data x-head.json type="application/json">
+  {
+    "title": "About | AlpineJS SPA",
+    "meta": [
+      {
+        "name": "description",
+        "content": "About page for an Alpine.js template example"
+      },
+      {
+        "name": "og:title",
+        "content": "About | AlpineJS SPA"
+      },
+      {
+        "name": "og:url",
+        "content": "https://alpinejs-spa.netlify.app/about"
+      }
+    ],
+    "link": [
+      {
+        "rel": "canonical",
+        "href": "https://alpinejs-spa.netlify.app/about"
+      }
+    ]
+  }
+  </script>
+
   <div class="container mx-auto">
     <div class="py-16 lg:py-20">
       <h1 class="flex items-center gap-3 pt-5 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
